zoo_sample.cfg adding tree structure configuration comments

--- a/conf/zoo_sample.cfg
+++ b/conf/zoo_sample.cfg
@@ -12,6 +12,8 @@ syncLimit=5
 dataDir=/tmp/zookeeper
 # the port at which the clients will connect
 clientPort=2181
+# Whether to enable tree structure(Default true)
+# isTreeCnxEnabled=True
 # the maximum number of client connections.
 # increase this if you need to handle more clients
 #maxClientCnxns=60
@@ -33,4 +35,12 @@ clientPort=2181
 #metricsProvider.className=org.apache.zookeeper.metrics.prometheus.PrometheusMetricsProvider
 #metricsProvider.httpPort=7000
 #metricsProvider.exportJvmInfo=true
+
+#####################cluster#####################
+#server.1=IP:port1:port2:port3:participant
+#server.2=IP:port1:port2:port3:participant
+#server.3=IP:port1:port2:port3:participant
+#server.4=IP:port1:port2:port3:participant
+#server.5=IP:port1:port2:port3:participant
+
 
